# sql-query-app

./: .env.sample  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  docker-compose.yml  mypy.ini
database-service/: Dockerfile  Pipfile  pyproject.toml
database-service/database_service/: main.py  settings.py
database-service/database_service/entities/: __init__.py  db_schema.py  query_result.py
database-service/database_service/routes/: __init__.py  execute_query.py  get_schema.py
database-service/database_service/utils/: __init__.py  db_engine.py  seeding.py
text-to-sql-service/: Dockerfile  Pipfile  pyproject.toml
text-to-sql-service/text_to_sql_service/: main.py
user-interface-service/: Pipfile  pyproject.toml
user-interface-service/user_interface_service/: main.py
